Update API spec and generated code
